# CodeCollab

./: .dockerignore  .gitignore  CICD.md  DEPLOY.md  Dockerfile  README.md  cypress.config.ts  docker-compose.dev.yml  docker-compose.yml  index.html  nginx.conf  openapi-spec.yaml  package-lock.json  package.json  render.yaml  start.sh  tsconfig.json
.github/workflows/: ci.yml
Backend/: README.md  pyproject.toml  session_response.json  verify_create.py  verify_executor.py  verify_get.py
Backend/app/: config.py  main.py
Backend/app/database/: instance.py  mock_db.py  postgres_db.py  sqlite_db.py
Backend/app/models/: schemas.py
Backend/app/routers/: code.py  sessions.py  users.py  websocket.py
Backend/app/services/: code_executor.py  session_service.py  user_service.py
Backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Backend/tests/: conftest.py  test_code.py  test_sessions.py  test_users.py  test_websocket.py
Frontend/: .env.production  index.html  package-lock.json  package.json  sync-server.cjs  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
Frontend/src/components/: CodeEditor.tsx  ErrorBoundary.tsx  Header.tsx  OutputPanel.tsx  ShareDialog.tsx  TypingIndicator.tsx  UserList.tsx  UserPanel.tsx  UsernameDialog.tsx
Frontend/src/test/: setup.ts
cypress/e2e/: collaboration.cy.ts  error-handling.cy.ts  session-flow.cy.ts
cypress/support/: commands.ts  e2e.ts
src/components/: CodeEditor.tsx  LanguageSelector.tsx  OutputPanel.tsx  UserPanel.tsx  UsernameDialog.tsx
src/pages/: Index.tsx  Session.tsx
src/types/: session.ts
(+9 files in other folders)
